@@ -1,5 +1,5 @@
 <window id="2001">
-	<defaultcontrol>5</defaultcontrol>
+	<defaultcontrol>35</defaultcontrol>
 	<backgroundcolor>0</backgroundcolor>
 	<allowoverlay>yes</allowoverlay>
 	<include>screen-fade</include>
@@ -652,14 +652,31 @@
 		</control>
 		<!-- Buttons -->
 		<control type="group">
+			<control type="button" id="35">
+				<description>play button</description>
+				<posx>128</posx>
+				<posy>650</posy>
+				<width>256</width>
+				<height>56</height>
+				<label>208</label>
+				<onleft>10</onleft>
+				<onright>5</onright>
+				<onup>50</onup>
+				<ondown>50</ondown>
+				<font>font13</font>
+				<align>center</align>
+				<textcolor>button-text</textcolor>
+				<shadowcolor>shadow-text</shadowcolor>
+				<onclick>RunScript(script.playalbum,artist=$ESCINFO[ListItem.Artist]&amp;album=$ESCINFO[ListItem.Album])</onclick>
+			</control>
 			<control type="button" id="5">
 				<description>Tracks/Review or Biography/Discography</description>
-				<posx>53</posx>
+				<posx>384</posx>
 				<posy>650</posy>
-				<width>354</width>
+				<width>256</width>
 				<height>56</height>
 				<label>182</label>
-				<onleft>10</onleft>
+				<onleft>35</onleft>
 				<onright>6</onright>
 				<onup>50</onup>
 				<ondown>50</ondown>
@@ -670,9 +687,9 @@
 			</control>
 			<control type="button" id="6">
 				<description>Refresh</description>
-				<posx>460</posx>
+				<posx>640</posx>
 				<posy>650</posy>
-				<width>354</width>
+				<width>256</width>
 				<height>56</height>
 				<label>184</label>
 				<font>font13</font>
@@ -686,15 +703,15 @@
 			</control>
 			<control type="button" id="10">
 				<description>Get Thumb</description>
-				<posx>867</posx>
+				<posx>896</posx>
 				<posy>650</posy>
-				<width>354</width>
+				<width>256</width>
 				<height>56</height>
 				<label>13405</label>
 				<align>center</align>
 				<font>font13</font>
 				<onleft>6</onleft>
-				<onright>5</onright>
+				<onright>35</onright>
 				<onup>50</onup>
 				<ondown>50</ondown>
 			</control>
