@@ -3,6 +3,7 @@
 	<requires>
 		<import addon="xbmc.gui" version="3.00"/>
 		<import addon="script.xbmc.debug.log" version="11.0.6"/>
+		<import addon="script.playalbum" version="0.0.6"/>
 		<import addon="script.artwork.downloader" version="1.0.1" optional="true"/>
 		<import addon="script.globalsearch" version="0.1.7" optional="true"/>
 		<import addon="script.tvtunes" version="1.0.1" optional="true"/>
