@@ -2,6 +2,7 @@
 - Changed Video watched/unwatched/partiallywatched flags to match iOS style flags
 - Added support for script.xbmc.debug.log to new skin/support menu
 - Added Hitcher's debug info and screen grid to skin/support menu
+- Added Play Album from Album info screen (Thanks Hitcher and Ronie for making this happen)
 - Extend support for clearart and logo's to Movies
 
 [B]1.2.0[/B]
